# measles

./: .CONTRIBUTING.md.swp  .biobuddies  .cookiecutter.yaml  .gitignore  .prettierrc.toml  CONTRIBUTING.md  README.md  TODO.md  cookiecutter.json  deploy.py  measles.py  mise.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  test-prettier.j2.html  test_boilerplate.py  test_measles.py  test_tooling.py
.biobuddies/: ruff.toml
.config/: mise.toml
.github/workflows/: act.yaml  create-pull-request.yaml
hooks/: django_boilerplate.py  post_gen_project.bash
{{cookiecutter.dot}}/: .gitignore  CONTRIBUTING.md  mise.toml  package.json  pyproject.toml  test_boilerplate.py
{{cookiecutter.dot}}/.biobuddies/: ruff.toml  typos.toml
{{cookiecutter.dot}}/.config/: mise.toml
{{cookiecutter.dot}}/.github/workflows/: act.yaml
