[project]
classifiers = [
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)',
    'Operating System :: OS Independent',
]
description = 'Cookiecutter template for continuously bootstrapped repos'
name = 'measles'
requires-python = '>=3.12'
version = '0'

[project.optional-dependencies]
precommit = [
    'actionlint-py',
    'basedpyright',
    'cookiecutter',
    'django-upgrade',
    'djlint',
    'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
    'pre-commit-hooks',
    'pyre-check',
    'pytest',
    'pytest-cov',
    'ruff',
    'shellcheck-py',
    'shfmt-py',
    'typos',
    'validate-pyproject[all]',
    'yamllint',
]

[tool.basedpyright]
extends = '.biobuddies/basedpyright.toml'
failOnWarnings = false

[tool.ruff]
extend = '.biobuddies/ruff.toml'
