[project]
name = '{{ CONA }}'
requires-python = '>=3.12'
version = '0'

dependencies = [
    {% for dependency in python_dependencies|sort %}
    '{{ dependency }}',
    {% endfor %}
]

[project.optional-dependencies]
{% set base = {
    'pre-commit': [
        'actionlint-py',
        'basedpyright',
        'cookiecutter',
        'django-upgrade',
        'djlint',
        'hadolint-py @ git+https://github.com/AleksaC/hadolint-py.git',
        'pre-commit-hooks',
        'pyrefly',
        'ruff',
        'shellcheck-py',
        'shfmt-py',
        'typos',
        'validate-pyproject[all]',
        'yamllint',
    ],
    'test': python_test_dependencies,
} -%}
{% set groups = dict(cookiecutter.python_optional_dependencies) -%}
{% for group, dependencies in base.items() -%}
{% set _ = groups.update({group: (dependencies + groups.get(group, []))|sort}) -%}
{% endfor -%}
{% for group, dependencies in groups.items()|sort -%}
{{ group }} = [
{{ "    '" ~ (dependencies|join("',\n    '")) ~ "'," if dependencies else '' }}
]
{% endfor %}
{% if has_django %}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'config.settings'
{% endif %}

[tool.basedpyright]
extends = '.biobuddies/basedpyright.toml'

[tool.ruff]
extend = '.biobuddies/ruff.toml'
